[gd_scene load_steps=6 format=3 uid="uid://pcebqfbytrc8"]

[ext_resource type="Script" uid="uid://3m6myyp5iquk" path="res://Input/input.gd" id="1_wekdd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gioh7"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.12941177, 0.12941177, 0.12941177, 0.9764706)
border_color = Color(0.11119679, 0.11119687, 0.11119684, 1)
border_blend = true
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.029506557, 0.029506557, 0.029506557, 0.6)
shadow_offset = Vector2(5, -5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5m2cd"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.2, 0.2, 0.2, 0.9764706)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.03137255, 0.03137255, 0.03137255, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6rb5x"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.32156864, 0.32156864, 0.32156864, 0.9764706)
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fiuso"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.48717004, 0.18570665, 0.14442256, 0.9764706)
corner_radius_top_left = 5
corner_radius_top_right = 5

[node name="Input" type="GraphNode"]
offset_right = 328.0
offset_bottom = 205.0
theme_override_constants/separation = 6
theme_override_styles/panel = SubResource("StyleBoxFlat_gioh7")
theme_override_styles/panel_selected = SubResource("StyleBoxFlat_5m2cd")
theme_override_styles/titlebar = SubResource("StyleBoxFlat_6rb5x")
theme_override_styles/titlebar_selected = SubResource("StyleBoxFlat_fiuso")
title = "Input"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_wekdd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "0"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "0"
placeholder_text = "0"
alignment = 2
max_length = 4
emoji_menu_enabled = false
virtual_keyboard_type = 3
clear_button_enabled = true
caret_blink = true

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Min"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit2" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "10"
placeholder_text = "10"
alignment = 2
max_length = 4
emoji_menu_enabled = false
virtual_keyboard_type = 3
clear_button_enabled = true
caret_blink = true

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Max"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
step = 0.1
value = 0.1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "     Increment"

[connection signal="text_submitted" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="text_submitted" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/LineEdit2" to="." method="_on_line_edit_2_text_submitted"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/HSlider" to="." method="_on_h_slider_value_changed"]
